--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-document-nodes": "4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "4.0.1",
     "@octokit/graphql-schema": "^14.32.0",
     "@tsconfig/node16": "^16.1.1",
     "@types/node": "^20.6.3",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-resolvers": "4.0.1",
-    "@graphql-codegen/typescript-document-nodes": "4.0.1"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@octokit/graphql": "^7.0.1",
