--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "cuttlecat",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
+  "exports": "./src/index.js",
   "scripts": {
     "start": "npx ts-node ./src/index.ts",
     "build": "rimraf ./dist && npm run codegen && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen-esm --config codegen.ts"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "author": "",
   "license": "ISC",
