--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,20 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
 
     /* Type Checking */
-    "noImplicitAny": true                               /* Enable error reporting for expressions and declarations with an implied 'any' type. */
+    "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied 'any' type. */
+    "module": "node16",
+    "moduleResolution": "node16",
+    "allowSyntheticDefaultImports": true, // To provide backwards compatibility, Node.js allows you to import most CommonJS packages with a default import. This flag tells TypeScript that it's okay to use import on CommonJS modules.
   },
   "exclude": [
     "node_modules",
     "dist",
     "codegen.ts",
-  ]
+  ],
+  "ts-node": {
+//    "transpileOnly": true,
+//    "files": true,
+//    "experimentalResolver": true,
+    "esm": true
+  }
 }
