--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@octokit/graphql": "^7.0.1",
+    "eventemitter3": "^5.0.1",
     "graphql": "^16.8.1",
     "p-queue": "^7.4.1"
   }
