--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@graphql-codegen/typescript-resolvers": "4.0.1",
     "@octokit/graphql-schema": "^14.32.0",
     "@tsconfig/node16": "^16.1.1",
+    "@types/mocha": "^10.0.2",
     "@types/node": "^20.6.3",
     "@types/uuid": "^9.0.4",
+    "chai": "^4.3.10",
     "envalid": "^8.0.0",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
@@ -29,6 +32,7 @@
   },
   "dependencies": {
     "@octokit/graphql": "^7.0.1",
+    "@types/lodash": "^4.14.199",
     "date-fns": "^2.30.0",
     "eventemitter3": "^5.0.1",
     "graphql": "^16.8.1",
