--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "graphql": "^16.8.1",
     "p-queue": "^7.4.1",
     "uuid": "^9.0.1"
+  },
+  "bugs": {
+    "url": "https://github.com/OpenTRFoundation/cuttlecat/issues"
   }
 }
