--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "graphql": "^16.8.1",
     "p-queue": "^7.4.1",
     "uuid": "^9.0.1",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21"
   },
   "bugs": {
     "url": "https://github.com/OpenTRFoundation/cuttlecat/issues"
