--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tsconfig/node16": "^16.1.1",
     "@types/mocha": "^10.0.2",
     "@types/node": "^20.6.3",
+    "@types/node-fetch": "^2.6.7",
     "@types/uuid": "^9.0.4",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
@@ -54,10 +55,12 @@
     "envalid": "^8.0.0",
     "eventemitter3": "^5.0.1",
     "graphql": "^16.8.1",
-    "p-queue": "^7.4.1",
-    "uuid": "^9.0.1",
     "graphql-tag": "^2.12.6",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "nock": "^13.3.4",
+    "node-fetch": "^2.7.0",
+    "p-queue": "^7.4.1",
+    "uuid": "^9.0.1"
   },
   "bugs": {
     "url": "https://github.com/OpenTRFoundation/cuttlecat/issues"
