--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "@graphql-codegen/typescript-resolvers": "4.0.1",
     "@octokit/graphql-schema": "^14.32.0",
     "@tsconfig/node16": "^16.1.1",
+    "@types/chai": "^4.3.9",
+    "@types/chai-as-promised": "^7.1.7",
     "@types/mocha": "^10.0.2",
     "@types/node": "^20.6.3",
     "@types/node-fetch": "^2.6.7",
     "@types/uuid": "^9.0.4",
     "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^10.2.0",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
