--- a/src/tasks/focusProjectCandidateSearch/nock-fixtures/06-unknown-error-with-narrower-scopes.json
+++ b/src/tasks/focusProjectCandidateSearch/nock-fixtures/06-unknown-error-with-narrower-scopes.json
@@ -4,7 +4,7 @@
     "method": "POST",
     "path": "/graphql",
     "body": {
-      "query": "\n    query RepositorySearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
+      "query": "\n    query FocusProjectCandidateSearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
       "variables": {
         "searchString": "is:public template:false archived:false stars:>50 forks:>50 size:>1000 pushed:>2023-01-01 created:2023-01-01..2023-01-01",
         "first": 100,
@@ -45,7 +45,7 @@
     "method": "POST",
     "path": "/graphql",
     "body": {
-      "query": "\n    query RepositorySearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
+      "query": "\n    query FocusProjectCandidateSearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
       "variables": {
         "searchString": "is:public template:false archived:false stars:>50 forks:>50 size:>1000 pushed:>2023-01-01 created:2023-01-02..2023-01-03",
         "first": 100,
@@ -72,7 +72,7 @@
     "method": "POST",
     "path": "/graphql",
     "body": {
-      "query": "\n    query RepositorySearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
+      "query": "\n    query FocusProjectCandidateSearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
       "variables": {
         "searchString": "is:public template:false archived:false stars:>50 forks:>50 size:>1000 pushed:>2023-01-01 created:2023-01-02..2023-01-03",
         "first": 100,
@@ -99,7 +99,7 @@
     "method": "POST",
     "path": "/graphql",
     "body": {
-      "query": "\n    query RepositorySearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
+      "query": "\n    query FocusProjectCandidateSearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
       "variables": {
         "searchString": "is:public template:false archived:false stars:>50 forks:>50 size:>1000 pushed:>2023-01-01 created:2023-01-02..2023-01-03",
         "first": 100,
@@ -126,7 +126,7 @@
     "method": "POST",
     "path": "/graphql",
     "body": {
-      "query": "\n    query RepositorySearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
+      "query": "\n    query FocusProjectCandidateSearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
       "variables": {
         "searchString": "is:public template:false archived:false stars:>50 forks:>50 size:>1000 pushed:>2023-01-01 created:2023-01-02..2023-01-03",
         "first": 100,
@@ -153,7 +153,7 @@
     "method": "POST",
     "path": "/graphql",
     "body": {
-      "query": "\n    query RepositorySearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
+      "query": "\n    query FocusProjectCandidateSearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
       "variables": {
         "searchString": "is:public template:false archived:false stars:>50 forks:>50 size:>1000 pushed:>2023-01-01 created:2023-01-02..2023-01-02",
         "first": 100,
@@ -194,7 +194,7 @@
     "method": "POST",
     "path": "/graphql",
     "body": {
-      "query": "\n    query RepositorySearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
+      "query": "\n    query FocusProjectCandidateSearch($searchString: String!, $first: Int!, $after: String) {\n  rateLimit {\n    cost\n    limit\n    nodeCount\n    remaining\n    resetAt\n    used\n  }\n  search(type: REPOSITORY, query: $searchString, first: $first, after: $after) {\n    pageInfo {\n      startCursor\n      hasNextPage\n      endCursor\n    }\n    repositoryCount\n    nodes {\n      ...RepositorySummary\n    }\n  }\n}\n    \n    fragment RepositorySummary on Repository {\n  nameWithOwner\n  isInOrganization\n  owner {\n    login\n  }\n  forkCount\n  stargazerCount\n  pullRequests {\n    totalCount\n  }\n  issues {\n    totalCount\n  }\n  mentionableUsers {\n    totalCount\n  }\n  watchers {\n    totalCount\n  }\n}\n    ",
       "variables": {
         "searchString": "is:public template:false archived:false stars:>50 forks:>50 size:>1000 pushed:>2023-01-01 created:2023-01-03..2023-01-03",
         "first": 100,
