--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/chai": "^4.3.9",
     "@types/chai-as-promised": "^7.1.7",
     "@types/mocha": "^10.0.2",
+    "@types/mock-fs": "^4.13.3",
     "@types/node": "^20.6.3",
     "@types/node-fetch": "^2.6.7",
     "@types/uuid": "^9.0.4",
@@ -50,6 +51,7 @@
     "chai-as-promised": "^7.1.1",
     "cpy-cli": "^5.0.0",
     "mocha": "^10.2.0",
+    "mock-fs": "^5.2.0",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
