--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opentr/cuttlecat",
-  "version": "0.0.6",
+  "version": "0.0.7-dev",
   "description": "cuttlecat is a tool for collecting data from GitHub.",
   "keywords": [
     "github",
