--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,13 @@
 
     // Generate d.ts files
     "declaration": true,                                /* Generates corresponding '.d.ts' file. */
+    "target": "ES2022", // Node.js 18
+    "module": "node16",
+    "moduleResolution": "node16"
   },
   "exclude": [
     "node_modules",
-    "dist",
+    "dist"
   ],
   "ts-node": {
     // Tell ts-node CLI to install the --loader automatically, explained below
